--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-	"deploy:ghdocs": "ng build --output-path docs --base-href /shortener/"
+	"deploy:ghdocs": "ng build --output-path docs --base-href /shortener-angular/"
   },
   "private": true,
   "dependencies": {
